--- a/scripts/env.yaml
+++ b/scripts/env.yaml
@@ -22,6 +22,7 @@ dependencies:
         - snakemake
         # anaconda
         - pillow
+        - runipy
 
 
 # `git clone https://github.com/DmitryUlyanov/Multicore-TSNE.git; cd Multicore-TSNE/; pip install .` # missed in env.yaml
