--- a/scripts/Snakefile
+++ b/scripts/Snakefile
@@ -16,9 +16,9 @@ rule targets:
         img=expand("res/img/jpg/{s}.jpg", s=SAMPLES),  # czi2img
         blobs=expand("res/blobs/{s}.npy.gz", s=SAMPLES),  # blob_detection
         view0=expand("res/blobs/{s}.html", s=SAMPLES),  # rand samples of detected blobs
-#        count1="count/COUNT.txt",  # count from weight1
+        count1="res/classification1/COUNT1.txt",  # count from weight1
+        view1=expand("res/classification1/{s}.html", s=SAMPLES), # view weight1-pos
 #        count2="count/COUNT.step1_test.txt", # count from weight1-pos -> weight2-pos
-#        view1=expand("filter1/view/{s}.html", s=SAMPLES), # view weight1-pos
 #        view2=expand("filter2/view/{s}.html", s=SAMPLES) # view weight1-weight2-pos
 
 rule czi2img:
@@ -82,28 +82,64 @@ rule view0:
         jupyter nbconvert --to html {output.nb} &>> {log}
         """
 
-rule filter1:
+rule classification1:
     input:
-        "res/blobs/{s}.npy.gz"
+        db="res/blobs/{s}.npy.gz",
+	weight=WEIGHT1
     output:
-        yes="res/filter1/{s}.yes.npy.gz",
-        all="res/filter1/{s}.pred.npy.gz",
-        log="res/filter1/{s}.log"
+        yes="res/classification1/{s}.yes.npy.gz",
+        all="res/classification1/{s}.pred.npy.gz",
+    log:
+        "res/classification1/{s}.log"
     benchmark:
-        "res/filter1/{s}.tsv"
+        "res/classification1/{s}.tsv"
     threads:
         1
     params:
         mem="8000"
     shell:
         """
-        python scripts/classification.py  -db {input} -o res/filter1 -l 1 -w {WEIGHT1} &> {output.log}
+        python scripts/classification.py  -db {input.db} -o res/classification1 -l 1 -w {input.weight} &> {log}
+        """
+
+rule view1:
+    input:
+        "res/classification1/{s}.pred.npy.gz"
+    output:
+        nb="res/classification1/{s}.ipynb",
+        html="res/classification1/{s}.html"
+    log:
+        "res/classification1/{s}.html.log"
+    benchmark:
+        "res/classification1/{s}.html.tsv"
+    threads:
+        1
+    params:
+        mem="8000"
+    shell:
+        """
+        fname={input} dir={WKDIR} runipy scripts/viewing_blobs.ipynb {output.nb} &> {log}
+        jupyter nbconvert --to html {output.nb} &>> {log}
+        """
+
+rule count1:
+    input:
+        expand("res/classification1/{s}.log", s=SAMPLES)
+    output:
+        "res/classification1/COUNT1.txt"
+    threads:
+        1
+    params:
+        mem="1000"
+    shell:
+        """
+        grep 'Predictions' {input} > {output}
         """
 
 
 rule filter2:
     input:
-        "res/filter1/{s}.yes.npy.gz"
+        "res/classification1/{s}.yes.npy.gz"
     output:
         yes="res/filter2/{s}.yes.yes.npy.gz",
         all="res/filter2/{s}.yes.pred.npy.gz",
@@ -120,19 +156,6 @@ rule filter2:
         """
 
 
-rule count1:
-    input:
-        expand("res/filter1/{s}.log", s=SAMPLES)
-    output:
-        "res/filter1/COUNT1.txt"
-    threads:
-        1
-    params:
-        mem="1000"
-    shell:
-        """
-        grep 'Predictions' {input} > {output}
-        """
 
 rule count2:
     input:
@@ -148,26 +171,6 @@ rule count2:
         grep 'Predictions' {input} > {output}
         """
 
-
-rule view1:
-    input:
-        "res/filter1/{s}.pred.npy.gz"
-    output:
-        nb="res/filter1/{s}.ipynb",
-        html="res/filter1/{s}.html"
-    log:
-        "res/filter1/{s}.html.log"
-    benchmark:
-        "res/filter1/{s}.html.tsv"
-    threads:
-        1
-    params:
-        mem="8000"
-    shell:
-        """
-        fname={input} dir={WKDIR} runipy scripts/viewing_blobs.ipynb {output.nb} &> {log}
-        jupyter nbconvert --to html {output.nb} &>> {log}
-        """
 
 
 rule view2:
