--- a/scripts/Snakefile
+++ b/scripts/Snakefile
@@ -18,8 +18,6 @@ rule targets:
         view0=expand("res/blobs/{s}.html", s=SAMPLES),  # rand samples of detected blobs
         count1="res/classification1/COUNT1.txt",  # count from weight1
         view1=expand("res/classification1/{s}.html", s=SAMPLES), # view weight1-pos
-#        count2="count/COUNT.step1_test.txt", # count from weight1-pos -> weight2-pos
-#        view2=expand("filter2/view/{s}.html", s=SAMPLES) # view weight1-weight2-pos
 
 rule czi2img:
     input:
@@ -99,7 +97,7 @@ rule classification1:
         mem="8000"
     shell:
         """
-        python scripts/classification.py  -db {input.db} -o res/classification1 -l 1 -w {input.weight} &> {log}
+        python scripts/classification.pred.py  -db {input.db} -o res/classification1 -l 1 -w {input.weight} &> {log}
         """
 
 rule view1:
