--- a/workflow/env.yaml
+++ b/workflow/env.yaml
@@ -10,7 +10,7 @@ dependencies:
         - python=3.6
         - pandas
         - imgaug
-        - opencv
+#        - opencv
         - scikit-image
         - jupyter
         - keras
@@ -23,7 +23,7 @@ dependencies:
         - snakemake
         # anaconda
         - pillow
-        - runipy
+#        - runipy
 
 
 # `git clone https://github.com/DmitryUlyanov/Multicore-TSNE.git; cd Multicore-TSNE/; pip install .` # missed in env.yaml
